# framework

./: .coveragerc  .env.example  .env_testing  .flake8  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE.md  README.md  alembic.ini  alembic.ini.example  pyproject.toml  requirements.txt  requirements_all.txt  requirements_dev.txt  routes.py
app/models/: profile.py  user.py
app/requests/: profile.py  user.py
app/responses/: profile.py  user.py
app/services/: app.py  profile.py  queue.py  user.py
config/: app.py  database.py
database/: artisan.db
database/migrations/: env.py
database/migrations/versions/: 755a62cde90a_create_profiles_table.py  be6c69c1a61a_create_users_table.py
database/seeders/: database_seeder.py  profile_seeder.py  user_seeder.py
docs/: Mastering Spartan for Serverless Development.pptx
handlers/: example.py  user.py
public/: main.py
public/static/: welcome.html
routes/: health.py  profiles.py  users.py
tests/: conftest.py  test_health_check.py  test_main.py  test_users.py
tests/feature/: test_health_check.py  test_users.py  test_users_endpoints.py
tests/unit/: test_app_config.py  test_app_service.py  test_base_model.py  test_database_config.py  test_queue_service.py  test_user_handler.py  test_user_model.py  test_user_service.py
